--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 </p>
             </div>
             <div class="top-img">
-                <img src="img/pexels-tima-miroshnichenko-5198239 1.png" alt="">
+                <img src="IMG/pexels-tima-miroshnichenko-5198239 1.png" alt="">
             </div>
         </div>
         <div class="bottom animate-right">
             <div class="bottom-img">
-                <img src="img/Smug1-New.png" alt="">
+                <img src="IMG/Smug1-New.png" alt="">
             </div>
-            <img src="img/mobile-smug.png" alt="" class="hide-desktop mobile-chibi">
+            <img src="IMG/mobile-smug.png" alt="" class="hide-desktop mobile-chibi">
             <div class="bottom-text">
                 <p>Of course, any learning journey involves time, study and dedication. Our private tutoring method was built from the ground up to give you the right techniques and tools to learn definitively, as quickly as possible. There's no miracle to get you there, though we're probably the closest thing to it. *awkward smile* <br><br></p>
                 <ul>
@@ -125,7 +125,7 @@
                             <br>
                             £25 / lesson 
                         </p>
-                        <img src="img/Hungry-smile-New (1).png" alt="">
+                        <img src="IMG/Hungry-smile-New (1).png" alt="">
                         <p class="card-content">
                             Private tutoring session with your exclusive teacher once a week. 
                         </p>
@@ -137,7 +137,7 @@
                             <br>
                             £22 / lesson 
                         </p>
-                        <img src="img/Fire-New_1.png" alt="">
+                        <img src="IMG/Fire-New_1.png" alt="">
                         <p class="card-content">
                             Private tutoring session with one or two exclusive teachers twice a week.
                         </p>
@@ -149,7 +149,7 @@
                             <br>
                             £20 / lesson 
                         </p>
-                        <img src="img/Hat-New_1.png" alt="">
+                        <img src="IMG/Hat-New_1.png" alt="">
                         <p class="card-content">
                             Private tutoring session with one or two exclusive teachers three times a week.
                         </p>
@@ -161,7 +161,7 @@
                             <br>
                             £480 / term 
                         </p>
-                        <img src="img/Love-New (1).png" alt="">
+                        <img src="IMG/Love-New (1).png" alt="">
                         <p class="card-content">
                             Group tutoring sessions with one of our exclusive teachers twice a week.
                         </p>
@@ -173,7 +173,7 @@
                             <br>
                             £480 / term  
                         </p>
-                        <img src="img/Love-New (1).png" alt="">
+                        <img src="IMG/Love-New (1).png" alt="">
                         <p class="card-content">
                             Group tutoring sessions with one of our exclusive teachers twice a week.
                         </p>
@@ -188,7 +188,7 @@
         </div>
         <div class="screen">
             <div class="video-container">
-                <video src="img/production ID_4911982.mp4" autoplay muted loop></video>
+                <video src="IMG/production ID_4911982.mp4" autoplay muted loop></video>
                 <img src="IMG/play-btn.png" alt="">
             </div>
         </div>
@@ -205,13 +205,13 @@
             <h1 class="testimonial-title">What People Say About Us</h1>
             <div class="t-cards">
             <div class="testimonial t-1">
-                <img src="img/Ellipse 7 (4).png" alt="head shot image man smiling">
+                <img src="IMG/Ellipse 7 (4).png" alt="head shot image man smiling">
                 <img class="icon" src="img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Bryan Cranston</h3>
             </div>
             <div class="testimonial t-2">
-                <img src="img/Ellipse 12.png" alt="head shot image woman smiling">
+                <img src="IMG/Ellipse 12.png" alt="head shot image woman smiling">
                 <img class="icon" src="img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Jennifer Lawrence</h3>
@@ -227,7 +227,7 @@
             </div>
             
             <div class="cta-img animate-right">
-                <img src="img/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
+                <img src="IMG/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
                 
             </div>
             <img class="mobile-cta-img animate-left" src="IMG/mobile-love.png" alt="Ricchaado cartoon character with heart eyes smiling">
