--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -64,14 +64,14 @@
             <h1 class="testimonial-title">What People Say About Us</h1>
             <div class="t-cards">
             <div class="testimonial t-1 about-t">
-                <img src="../img/Ellipse 7 (4).png" alt="head shot image man smiling">
-                <img class="icon" src="../img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
+                <img src="../IMG/Ellipse 7 (4).png" alt="head shot image man smiling">
+                <img class="icon" src="../IMG/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Bryan Cranston</h3>
             </div>
             <div class="testimonial t-2 about-t">
-                <img src="../img/Ellipse 12.png" alt="head shot image woman smiling">
-                <img class="icon" src="../img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
+                <img src="../IMG/Ellipse 12.png" alt="head shot image woman smiling">
+                <img class="icon" src="../IMG/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Jennifer Lawrence</h3>
             </div>
