--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <button class="main-btn"><a href="/HTML/contact.html">START NOW</a></button>
         </div>
         <div class="teacher-img animate-right">
-            <img src="img/pexels-julia-m-cameron-4145196 1 (1).png" alt="">
+            <img src="IMG/pexels-julia-m-cameron-4145196 1 (1).png" alt="">
         </div>
     </div>
     </section>
@@ -98,7 +98,7 @@
     <section class="start-now">
         <div class="container">
             <div class="start-img animate-left">
-                <img src="img/pexels-rodnae-productions-6517080 1 (1).png" alt="">
+                <img src="IMG/pexels-rodnae-productions-6517080 1 (1).png" alt="">
             </div>
         <div class="start-content animate-right">
             <h1>READY TO START YOUR JAPANESE JOURNEY?</h1>
@@ -206,13 +206,13 @@
             <div class="t-cards">
             <div class="testimonial t-1">
                 <img src="IMG/Ellipse 7 (4).png" alt="head shot image man smiling">
-                <img class="icon" src="img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
+                <img class="icon" src="IMG/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Bryan Cranston</h3>
             </div>
             <div class="testimonial t-2">
                 <img src="IMG/Ellipse 12.png" alt="head shot image woman smiling">
-                <img class="icon" src="img/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
+                <img class="icon" src="IMG/iconmonstr-quote-3 1 (2).png" alt="quotation marks">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Donec sodales sagittis magna. Sed consequat, leo eget bibendum </p>
                 <h3>Jennifer Lawrence</h3>
             </div>
