--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="teacher-content animate-left">
             <h1>WE HAVE AN EXCLUSIVE TEACHER JUST FOR YOU!</h1>
             <p>Online Japanese tutoring with an exclusive tutor that will monitor your progress throughout. No recorded lessons and no wild promises. Our teachers have the experience TO MAKE SURE YOU'LL LEARN THE RIGHT WAY.</p>
-            <button class="main-btn"><a href="/HTML/contact.html">START NOW</a></button>
+            <button class="main-btn"><a href="HTML/contact.html">START NOW</a></button>
         </div>
         <div class="teacher-img animate-right">
             <img src="IMG/pexels-julia-m-cameron-4145196 1 (1).png" alt="">
@@ -109,7 +109,7 @@
                 3. Decide which lesson package you'd like to purchase
                 <br><br>
                 4. Finally start learning Japanese for real and turn those subs off for good ;)</p>
-            <button class="main-btn"><a href="/HTML/contact.html"> GET STARTED</a></button>
+            <button class="main-btn"><a href="HTML/contact.html"> GET STARTED</a></button>
         </div>
         
     </div>
@@ -223,7 +223,7 @@
         <div class="container">
             <div class="cta animate-left">
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
-                <button class="main-btn">Start Now</button>
+                <button class="main-btn"><a href="HTML/contact.html">Start Now</a></button>
             </div>
             
             <div class="cta-img animate-right">
