--- a/HTML/about.html
+++ b/HTML/about.html
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="cta animate-left">
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
-                <button class="main-btn">Start Now</button>
+                <button class="main-btn"><a href="../HTML/contact.html">Start Now</a></button>
             </div>
             
             <div class="cta-img animate-right">
