--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <li><a href="#">Terms and Conditions</a></li>
                 </ul>
             </div>
-            <div class="tagline">©RicchaddoTV Clothing | 2078 Random Address, Du 6788</div>
+            <div class="tagline">©Ricchaddo Academy | 2022</div>
         </div>
         </div>
     </footer>
