--- a/index.html
+++ b/index.html
@@ -243,10 +243,8 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">Contact Support</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact</a></li>
                     <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Shipping Returns</a></li>
                     <li><a href="#">Terms and Conditions</a></li>
                 </ul>
             </div>
