--- a/HTML/shohai.html
+++ b/HTML/shohai.html
@@ -42,7 +42,7 @@
                     
                         condimentum. </p>
                     <div class="btn">
-                        <a class="main-btn" id="button" href="#">TALK TO SOMEONE ON OUR TEAM</a>
+                        <a class="main-btn" id="button" href="#">TALK TO OUR TEAM</a>
                     </div>
                     
                 </div>
