--- a/HTML/shohai.html
+++ b/HTML/shohai.html
@@ -95,20 +95,18 @@
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="../IMG/youtube.png" alt=""></a>
-                <a href="#"><img src="../IMG/instagram.png" alt=""></a>
-                <a href="#"><img src="../IMG/tiktok.png" alt=""></a>
+                <a href="#"><img src="IMG/Youtube (1).png" alt=""></a>
+                <a href="#"><img src="IMG/Instagram (1).png" alt=""></a>
+                <a href="#"><img src="IMG/TikTok (1).png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">Contact Support</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact</a></li>
                     <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Shipping Returns</a></li>
                     <li><a href="#">Terms and Conditions</a></li>
                 </ul>
             </div>
-            <div class="tagline">©RicchaddoTV Clothing | 2078 Random Address, Du 6788</div>
+            <div class="tagline">©Ricchaddo Academy | 2022</div>
         </div>
         </div>
     </footer>
