--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="bottom-img">
                 <img src="IMG/Smug1-New.png" alt="">
             </div>
-            <img src="IMG/mobile-smug.png" alt="" class="hide-desktop mobile-chibi">
+            <img src="IMG/Smug1-New-mobile.png" alt="" class="hide-desktop mobile-chibi">
             <div class="bottom-text">
                 <p>Of course, any learning journey involves time, study and dedication. Our private tutoring method was built from the ground up to give you the right techniques and tools to learn definitively, as quickly as possible. There's no miracle to get you there, though we're probably the closest thing to it. *awkward smile* <br><br></p>
                 <ul>
@@ -230,7 +230,7 @@
                 <img src="IMG/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
                 
             </div>
-            <img class="mobile-cta-img animate-left" src="IMG/mobile-love.png" alt="Ricchaado cartoon character with heart eyes smiling">
+            <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mb.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
     </section>
     <footer>
