--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <img src="IMG/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
                 
             </div>
-            <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mb.png" alt="Ricchaado cartoon character with heart eyes smiling">
+            <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
     </section>
     <footer>
