--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="top animate-left">
             <div class="top-text">
                 <p>
-                    Achieving Japanese proficiency is actually much more attainable than you might think. Living in Japan isn't even "necessarily necessary" (say that 3 times fast). Get started now and you'll be able to learn proper Japanese using proven study techniques with courses tailored to your learning style!
+                    Achieving Japanese proficiency is actually much more attainable than you might think. Living in Japan isn't even "necessarily necessary" (say that 3 times fast). <strong>Get started now </strong>and you'll be able to learn proper Japanese using proven study techniques with courses tailored to your learning style!
 
 
 
@@ -62,18 +62,20 @@
         <div class="bottom animate-right">
             <div class="bottom-img">
                 <img src="IMG/Smug1-New.png" alt="">
+                <img class="green-blob" src="IMG/Vector 1.png" alt="">
             </div>
             <img src="IMG/Smug1-New-mobile.png" alt="" class="hide-desktop mobile-chibi">
             <div class="bottom-text">
                 <p>Of course, any learning journey involves time, study and dedication. Our private tutoring method was built from the ground up to give you the right techniques and tools to learn definitively, as quickly as possible. There's no miracle to get you there, though we're probably the closest thing to it. *awkward smile* <br><br></p>
                 <ul>
-                    <li><img src="IMG/Vector.png" alt=""> Support from an amazing team committed to keeping you happy </li><br>
-                    <li><img src="IMG/Vector.png" alt="">Extra activities and learning resources on demand, for free.</li><br>
-                    <li><img src="IMG/Vector.png" alt="">Optional group conversation lessons available: meet new people and learn Japanese together!</li><br>
+                    <li><img src="IMG/iconmonstr-check-mark-4 3.png" alt=""> Support from an amazing team committed to keeping you happy </li><br>
+                    <li><img src="IMG/iconmonstr-check-mark-4 3.png" alt="">Extra activities and learning resources on demand, for free.</li><br>
+                    <li><img src="IMG/iconmonstr-check-mark-4 3.png" alt="">Optional group conversation lessons available: meet new people and learn Japanese together!</li><br>
                 </ul>
             </div>
         </div>
         </div>
+        <img class="mango" src="IMG/mango (1).png" alt="">
     </section>
     <section class="teacher">
         <div class="container">
