--- a/HTML/about.html
+++ b/HTML/about.html
@@ -34,18 +34,18 @@
                 <p>Richard is a 24 year old creative talent (if he so says himself) from London, U.K. He is most recognized for his comedy - online fluent Japanese skits that portray the funny reality of living in Japan as a foreigner. In his late teens, Richard was bored enough to move to Japan and find a job on purely self taught Japanese and now wants to share knowledge and culture with other people who are starting their Japanese Journey!"</p>
 
             </div>
-            <div class="about-img animate-right">
+            <div class="about-img ricchaado-img animate-right">
                 <img src="../IMG/R (35) (1).jpg" alt="">
             </div>
         </div>
     </section>
     <section id="about" class="about-section">
         <div class="container">
-            <div class="about-img animate-right">
+            <div class="about-img bruno-img animate-right">
                 <img src="../IMG/ef0c79e2-1239-4de6-b01b-b5f92e48ce83.jpg" alt="">
             </div>
             <div class="about-content animate-right">
-                <h1>About Bruno</h1>
+                <h1 class="bruo-title">About Bruno</h1>
                 <p>Hey there! I'm Bruno. Richard and I met in Japan – we were both living there at the same time and we had friends in common. I worked there as a teacher and opened my own language school in my home country, Brazil. So we Richard told me about Ricchaado Academy I instantly wanted to be a part of it!
 
                     I handle all of the administrative stuff – reports, bills, letters and certificates, basically any demand our students might have, I'm the guy to talk to. 
@@ -87,7 +87,10 @@
     </section>
     <section class="final-cta">
         <div class="container">
+             <img class="sakura-1" src="../IMG/Sakura (1).png" alt="sakura blossom">
+                <img id="japan-fan" class="japan-fan" src="../IMG/japan-fan.png" alt="">
             <div class="cta animate-left">
+               
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
                 <button class="main-btn"><a href="../HTML/contact.html">Start Now</a></button>
             </div>
