--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -80,6 +80,8 @@
     </section>
     <section class="final-cta">
         <div class="container">
+            <img class="sakura-1" src="../IMG/Sakura (1).png" alt="sakura blossom">
+                <img id="japan-fan" class="japan-fan" src="../IMG/japan-fan.png" alt="">
             <div class="cta animate-left">
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
                 <button class="main-btn"><a href="../index.html#courses"> View Courses</a></button>
