--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
             Done with your homework and want more? Just ask! We're extra-accommodating to try-hard nerds. We'll give you extra activities and exercises on-demand.</p>
         </div>
+        <img class="sakura-1" src="IMG/Sakura (1).png" alt="sakura blossom">
+        <img class="sakura-2" src="IMG/Sakura (1).png" alt="sakura blossom">
     </section>
     <section class="start-now">
         <div class="container">
@@ -201,6 +203,7 @@
             
         </div>
         <img class="rich-img" src="IMG/Rich-img 1 (1).png" alt="ricchaado cartoon character smiling">
+        
     </section>
     <section class="testimonials">
         <div class="container animate-bottom">
@@ -224,6 +227,7 @@
     <section class="final-cta">
         <div class="container">
             <div class="cta animate-left">
+                <img class="japan-fan" src="IMG/japan-fan.png" alt="">
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
                 <button class="main-btn"><a href="HTML/contact.html">Start Now</a></button>
             </div>
@@ -234,6 +238,7 @@
             </div>
             <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
+        <img class="mountain" src="IMG/mountain.png" alt="">
     </section>
     <footer>
         <div class="container">
