--- a/HTML/about.html
+++ b/HTML/about.html
@@ -100,6 +100,7 @@
             </div>
             <img class="mobile-cta-img animate-left" src="../IMG/mobile-love.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
+        <img class="mountain" src="../IMG/mountain.png" alt="">
     </section>
     <footer>
         <div class="container">
