--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>RicchadoTv</title>
 </head>
 <body>
+    <div class="wrapper">
     <header>
             <nav>
                 <div class="logo">
@@ -259,6 +260,7 @@
         </div>
         </div>
     </footer>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="app.js"></script>
     <script src="index.js"></script>
