--- a/HTML/hokage.html
+++ b/HTML/hokage.html
@@ -11,6 +11,7 @@
     <title>RicchadoTv</title>
 </head>
 <body>
+    <div class="wrapper">
     <header class="banner">
         <nav>
             <div class="logo">
@@ -109,7 +110,7 @@
         </div>
         </div>
     </footer>
-
+</div>
     <script src="../app.js"></script>
 </body>
 </html>
