--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
     </section>
     <section class="final-cta">
         <div class="container">
+            <img class="japan-fan animate-left" src="IMG/japan-fan.png" alt="">
             <div class="cta animate-left">
-                <img class="japan-fan" src="IMG/japan-fan.png" alt="">
+                
                 <h2>START NOW AND TURN OFF THEM SUBS FOR GOOD! </h2>
                 <button class="main-btn"><a href="HTML/contact.html">Start Now</a></button>
             </div>
