--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,6 +9,7 @@
     <title>RicchadoTv</title>
 </head>
 <body>
+    <div class="wrapper">
     <header class="banner">
         <nav>
             <div class="logo">
@@ -121,6 +122,7 @@
         </div>
         </div>
     </footer>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../app.js"></script>
 </body>
