--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -10,6 +10,7 @@
     <title>RicchadoTv</title>
 </head>
 <body>
+    <div class="wrapper">
     <header class="banner">
         <nav>
             <div class="logo">
@@ -112,6 +113,7 @@
         </div>
         </div>
     </footer>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../app.js"></script>
 </body>
