--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
             <nav>
                 <div class="logo">
-                    Ricchaado Academy
+                    <a href="#">Ricchaado Academy</a> 
                 </div>
                 <ul class="nav-links show-desktop hide-mobile" id="nav"">
                     <li><a href="#hero">Home</a></li>
@@ -242,6 +242,7 @@
         </div>
         <img class="mountain" src="IMG/mountain.png" alt="">
     </section>
+    <section class="footer">
     <footer>
         <div class="container">
             <div class="social">
@@ -259,6 +260,7 @@
             <div class="tagline">©Ricchaddo Academy | 2022</div>
         </div>
     </footer>
+</section>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="app.js"></script>
