--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,7 +14,7 @@
     <header class="banner">
         <nav>
             <div class="logo">
-                RicchaadoTv
+                <a href="#">Ricchaado Academy</a> 
             </div>
             <ul class="nav-links show-desktop hide-mobile" id="nav"">
                 <li><a href="../index.html">Home</a></li>
