--- a/HTML/shohai.html
+++ b/HTML/shohai.html
@@ -15,7 +15,7 @@
     <header class="banner">
         <nav>
             <div class="logo">
-                <a href="#">Ricchaado Academy</a> 
+                <a href="../index.html">Ricchaado Academy</a> 
             </div>
             <ul class="nav-links show-desktop hide-mobile" id="nav"">
                 <li><a href="../index.html">Home</a></li>
