--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms and Conditions</a></li>
                 </ul>
+                <p class="tagline">©Ricchaddo Academy | 2022</p>
             </div>
-            <div class="tagline">©Ricchaddo Academy | 2022</div>
+            
         </div>
     </footer>
 </section>
