--- a/HTML/about.html
+++ b/HTML/about.html
@@ -99,7 +99,7 @@
             <div class="cta-img animate-right">
                 <img src="../IMG/Normal-New (3).png" alt="">
             </div>
-            <img class="mobile-cta-img animate-left" src="../IMG/mobile-love.png" alt="Ricchaado cartoon character with heart eyes smiling">
+            <img class="mobile-cta-img animate-left" src="../IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
         <img class="mountain" src="../IMG/mountain.png" alt="">
     </section>
@@ -107,9 +107,9 @@
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="IMG/Youtube (1).png" alt=""></a>
-                <a href="#"><img src="IMG/Instagram (1).png" alt=""></a>
-                <a href="#"><img src="IMG/TikTok (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Youtube (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Instagram (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/TikTok (1).png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
