--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -91,16 +91,16 @@
             <div class="cta-img animate-right">
                 <img src="../IMG/Thinking.png" alt="">
             </div>
-            <img class="mobile-cta-img animate-left" src="../IMG/mobile-love.png" alt="Ricchaado cartoon character with heart eyes smiling">
+            <img class="mobile-cta-img animate-left" src="../IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
     </section>
     <footer>
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="IMG/Youtube (1).png" alt=""></a>
-                <a href="#"><img src="IMG/Instagram (1).png" alt=""></a>
-                <a href="#"><img src="IMG/TikTok (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Youtube (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Instagram (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/TikTok (1).png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
