--- a/HTML/sempai.html
+++ b/HTML/sempai.html
@@ -95,9 +95,9 @@
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="IMG/Youtube (1).png" alt=""></a>
-                <a href="#"><img src="IMG/Instagram (1).png" alt=""></a>
-                <a href="#"><img src="IMG/TikTok (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Youtube (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/Instagram (1).png" alt=""></a>
+                <a href="#"><img src="../IMG/TikTok (1).png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
