--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <button class="main-btn"><a href="HTML/hokage.html">LEARN MORE</a></button>
                     </div>
                     <div class="card card-4">
-                        <h2 class="card-title">Group - n5.1</h2>
+                        <h2 class="card-title">Group - n5.1 + n5.2</h2>
                         <p class="price">2x / week 
                             <br>
                             £480 / term 
@@ -172,18 +172,7 @@
                         </p>
                         <button class="main-btn"><a href="HTML/N5.1.html">LEARN MORE</a></button>
                     </div>
-                    <div class="card card-5">
-                        <h2 class="card-title">Group - n5.2</h2>
-                        <p class="price">2x / week 
-                            <br>
-                            £480 / term  
-                        </p>
-                        <img src="IMG/Love-New (1).png" alt="">
-                        <p class="card-content">
-                            Group tutoring sessions with one of our exclusive teachers twice a week.
-                        </p>
-                        <button class="main-btn">LEARN MORE</button>
-                    </div>
+                    
             </div>
         </div>
     </section>
@@ -238,6 +227,7 @@
                 <img src="IMG/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
                 
             </div>
+            <img class="mobile-hiragana" src="IMG/ganbate.png" alt="">
             <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
         <img class="mountain" src="IMG/mountain.png" alt="">
