--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     </section>
     <section class="final-cta">
         <div class="container">
+            <img class="sakura-1" src="../IMG/Sakura (1).png" alt="sakura blossom">
             <img class="japan-fan animate-left" src="IMG/japan-fan.png" alt="">
             <div class="cta animate-left">
                 
@@ -227,7 +228,7 @@
                 <img src="IMG/Normal-New (3).png" alt="Ricchaado cartoon character smiling">
                 
             </div>
-            <img class="mobile-hiragana" src="IMG/ganbate.png" alt="">
+            <img class="mobile-hiragana animate-right" src="IMG/ganbate.png" alt="">
             <img class="mobile-cta-img animate-left" src="IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
         <img class="mountain" src="IMG/mountain.png" alt="">
