--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </section>
     <section class="final-cta">
         <div class="container">
-            <img class="sakura-1" src="../IMG/Sakura (1).png" alt="sakura blossom">
+            <img class="sakura-1 sakura-cta" src="IMG/Sakura (1).png" alt="sakura blossom">
             <img class="japan-fan animate-left" src="IMG/japan-fan.png" alt="">
             <div class="cta animate-left">
                 
