--- a/HTML/about.html
+++ b/HTML/about.html
@@ -107,9 +107,9 @@
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="../IMG/Youtube (1).png" alt=""></a>
-                <a href="#"><img src="../IMG/Instagram (1).png" alt=""></a>
-                <a href="#"><img src="../IMG/TikTok (1).png" alt=""></a>
+                <a href="https://www.youtube.com/c/ricchaadotv?app=desktop" target="_blank"><img src="../IMG/Youtube (1).png" alt=""></a>
+                <a href="https://www.instagram.com/ricchaado.academy/" target="_blank"><img src="../IMG/Instagram (1).png" alt=""></a>
+                <a href="https://www.tiktok.com/@ricchaadotv?lang=en" target="_blank"><img src="../IMG/TikTok (1).png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
