--- a/HTML/sempai.html
+++ b/HTML/sempai.html
@@ -95,9 +95,9 @@
         <div class="container">
         <div class="footer-info">
             <div class="social">
-                <a href="#"><img src="../IMG/Group 10.png" alt=""></a>
-                <a href="#"><img src="../IMG/Group 11.png" alt=""></a>
-                <a href="#"><img src="../IMG/Group 12.png" alt=""></a>
+                <a href="https://www.youtube.com/c/ricchaadotv?app=desktop" target="_blank"><img src="../IMG/Group 10.png" alt=""></a>
+                <a href="https://www.instagram.com/ricchaado.academy/" target="_blank"><img src="../IMG/Group 11.png" alt=""></a>
+                <a href="https://www.tiktok.com/@ricchaadotv?lang=en" target="_blank"><img src="../IMG/Group 12.png" alt=""></a>
             </div>
             <div class="footer-links">
                 <ul>
