--- a/HTML/about.html
+++ b/HTML/about.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
     </header>
-    <section id="about" class="about-section">
+    <section id="about" class="about-section ricchaado-section">
         <div class="container">
             <div class="about-content animate-left">
                 <h1>About Ricchaado</h1>
