--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -89,7 +89,7 @@
             </div>
             
             <div class="cta-img animate-right">
-                <img src="../IMG/Thinking.png" alt="">
+                <img src="../IMG/Normal-New (3).png" alt="">
             </div>
             <img class="mobile-cta-img animate-left" src="../IMG/Love-Smile-New-mobile.png" alt="Ricchaado cartoon character with heart eyes smiling">
         </div>
