--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html">Ricchaado Academy</a> 
+                    <a href="index.html"><img src="IMG/RA-Logo-F-Color-B.png" alt=""></a> 
                 </div>
                 <ul class="nav-links show-desktop hide-mobile" id="nav"">
                     <li><a href="#hero">Home</a></li>
