--- a/HTML/about.html
+++ b/HTML/about.html
@@ -13,7 +13,7 @@
     <header class="banner">
         <nav>
             <div class="logo">
-                <a href="../index.html">Ricchaado Academy</a> 
+                <a href="index.html"><img src="IMG/RA-Logo-F-Color-B.png" alt=""></a> 
             </div>
             <ul class="nav-links show-desktop hide-mobile" id="nav"">
                 <li><a href="../index.html">Home</a></li>
